<resources>
    <string name="app_name">TwoPaneApp</string>
    <string name="button_back_title">Back</string>

    <string name="menu_options">Опции</string>
    <string name="item_sort_az">Сортировка по алфавиту</string>
    <string name="item_sort_time">Сортировка по времени</string>


    <string name="drawer_item_home">Домой</string>
    <string name="drawer_item_collapsing_toolbar">CollapsingToolbar</string>
    <string name="drawer_item_map">Карта</string>
    <string name="drawer_item_settings">Настройки</string>
    <string name="drawer_item_help">Опции</string>
    <string name="drawer_item_contact">Контакты</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="text_cardview_1">Title for cardview #1</string>
    <string name="text_cardview_2">Title for cardview #2</string>
    <string name="item_type_norm">Стандартная</string>
    <string name="item_type_hybrid">Гибридная</string>
    <string name="item_type_satellite">Спутник</string>
    <string name="item_type_terrain">Местность</string>

</resources>
